fixed nav positon and managed overflow

--- a/src/styles/mixins.styl
+++ b/src/styles/mixins.styl
@@ -7,3 +7,6 @@ comp-size($height, $width)
   width $width
   max-height $height
   max-width $width
+
+right-gradient($color1 = #27fea3, $color2 = #27feee)
+  background-image linear-gradient(to right, $color1, $color2)
